# dionysus

./: .gitignore  Makefile  README.md
crates/dionysus-api/: Cargo.toml  Rocket.toml
crates/dionysus-api/migrations/v1/logs/: 1_create.sql
crates/dionysus-api/src/: healthz.rs  main.rs
crates/dionysus-api/src/logs/: mod.rs  v1.rs
crates/dionysus-config/: Cargo.toml
crates/dionysus-config/src/: lib.rs
crates/dionysus-core/: Cargo.toml
crates/dionysus-core/src/: lib.rs  library.rs
crates/dionysus-metadata/: Cargo.toml
crates/dionysus-metadata/src/: lib.rs
crates/dionysus-models/: Cargo.toml
crates/dionysus-stream/: Cargo.toml
crates/dionysus-transcoding/: Cargo.toml
crates/dionysus-transcoding/src/: ffmpeg.rs  lib.rs
crates/dionysus-web/: Cargo.toml
web/: package.json
web/apps/web/pages/: index.tsx
