[package]
name = "dionysus-api"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets", "tls"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]
